# dividend-analysis

./: .gitignore  README.md  pyproject.toml  run-pipeline.py
src/: 01-get-dividends-and-payouts.py  01_get_dividends_and_payouts.py  02-clean-dicidends-and-payouts.py  02_clean_dividends_and_payouts.py  02_get_share_prices.py  03-get-annual-share-prices.py  03_clean_dividends_and_payouts.py  03_get_annual_share_prices copy.py  03_get_share_prices.py  04-get-annual-fund-prices.py  04_clean_share_prices.py  05-clean-share-prices.py  05_clean_share_prices.py  05_get_ticker_isin_map.py  06-clean-fund-prices.py  06_clean_fund_prices.py  06_get_company_history.py  07-get-ticker-isin-map.py  07_get_ticker_isin_map.py  08-get-history.py  09-clean-history.py  09_clean_history.py  10-get-dividends.py  11-get-annual-prices.py  11_clean-annual-prices.py  12-get-yield-starting-from-year.py  13-get-consumer-price-index-change.py  14-get-etf-prices.py  15-get-etf-yield-starting-from-year.py  16-get-plot-data.py  17-get-plot.py  get_dividends_and_payouts.py  get_share_prices.py
