[project]
name = "dividend-analysis"
version = "0.1.0"
description = "Project to compare dividend returns of stocks and funds of the Nasdaq Baltic Stock Exchange."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.0",
    "tqdm>=4.67.3",
    "yfinance>=1.2.0",
]
